v.1.0 register user by default role user responsive design for dashborad

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_NAME=laravel-task-manager
+APP_ENV=production
+APP_KEY=base64:9cp1OQca0skbshI9qjp5evJSrhBnBUsKMKzh++wjJl4=
+APP_DEBUG=false
+APP_URL=https://attractive-enthusiasm-production.up.railway.app
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,13 +21,13 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=sparti_new
+DB_HOST=yamanote.proxy.rlwy.net
+DB_PORT=26012
+DB_DATABASE=railway
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=vbBwmyfOsycwprNapSzJmnjAAeNelfUO
 
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
